# speer

./: .gitignore  README.md  nuxt.config.js  package.json
.github/workflows/: backend.yaml  build.yaml
backend/: .gitignore  Cargo.toml  changelog.json  compose.dev.yaml  compose.prod.yaml  docker-compose.yaml  dockerfile.dev  dockerfile.prod  routes.js  speer.js
backend/bindings/: Feedback.ts  MeUser.ts  Message.ts  MinimalDevice.ts  MinimalUser.ts  PusherMessage.ts  SignalMessage.ts
backend/emails/: emailConfirmation.html  feedbackNotification.html
backend/globals/: mail.js  mailjet.js  pusher.js  sessionParser.js  signalServer.js
backend/models/: confirm.js  feedback.js  user.js
backend/src/: jwt.rs  mail.rs  main.rs  routes.rs  utils.rs
backend/src/schemas/: confirm.rs  device.rs  feedback.rs  mod.rs  user.rs
backend/src/ws/: connection.rs  message.rs  mod.rs  route.rs  server.rs
frontend/: .gitignore  app.config.ts  compose.dev.yaml  compose.prod.yaml  dockerfile.dev  dockerfile.prod  nuxt.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/assets/: main.css  main.scss
frontend/components/: call.vue  imageCropper.vue  sideBar.vue  userCard.vue
frontend/components/popUp/: addCallPartner.vue  addFriends.vue  alert.vue  breakingChange.vue  call.vue  callSettings.vue  changelog.vue  feedback.vue  file.vue  filesFromShare.vue  filesToConfirm.vue  imageCropper.vue  imageViewer.vue  notification.vue  ping.vue  popUp.vue  profile.vue  requests.vue  settings.vue  videoViewer.vue
frontend/composables/: api.ts  connection.ts  getAuthUser.ts  pusher.ts  room.ts  signaler.ts  ws.ts
frontend/layouts/: default.vue  login.vue
frontend/middleware/: auth.js  auth.ts
frontend/pages/: cancel.vue  confirm.vue  index.vue  login.vue  register.vue
frontend/pages/cancel/: _token.vue
frontend/pages/confirm/: _token.vue
frontend/plugins/: axios.js  drag.js  peerclient.js  pusher.js
frontend/static/: notifier.js  share-target.js
frontend/store/: call.js  index.js  popUp.js
