[package]
name = "speers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
mongodb = "1.2.2"
serde_json = "1.0.64"
serde = "1.0.126"
futures = "0.3.16"
actix-cors = "0.5.4"
cookie = "0.15"
bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
env_logger = "0.9.0"
actix-files = "0.5.0"