[package]
name = "speers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-web-actors = "3.0.0"
# mongodb = "1.2.4"
serde_json = "1.0.64"
serde = "1.0.126"
futures = "0.3.16"
actix-cors = "0.5.4"
cookie = "0.16.0"
bcrypt = "0.10.1"
jsonwebtoken = "8.0.1"
env_logger = "0.9.0"
actix-files = "0.5.0"
image = "0.24.0"
awmp = "0.7.0"
rand = "0.8.4"
html-escape = "0.2.9"
dotenv = "0.15.0"
envy = "0.4.2"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]