[package]
name = "speer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.17.0"
actix = "0.13.0"
actix-web = { version = "4.0.1" }
actix-web-actors = "4.0.0"
actix-files = "0.6.0"
actix-cors = "0.6.0"
reqwest = { version = "0.11.9", features = ["json"] }
awmp = "0.8.0"
mongodb = "2.1.0"
serde_json = "1.0.64"
serde = "1.0.126"
futures = "0.3.16"
cookie = "0.16.0"
bcrypt = "0.12.0"
jsonwebtoken = "8.0.1"
env_logger = "0.9.0"
image = "0.24.0"
rand = "0.8.4"
html-escape = "0.2.9"
dotenv = "0.15.0"
envy = "0.4.2"
web-push = "0.9.1"
unicode-segmentation = "1.9.0"
openssl = { version = "0.10.38", features = ["vendored"] } # only needed to be able to compile to target "x86_64-unknown-linux-musl"

[profile.release]
strip = true
lto = true
